--- a/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.resx
@@ -423,4 +423,7 @@
   <data name="Consumables" xml:space="preserve">
     <value>Consumables</value>
   </data>
+  <data name="Expansions" xml:space="preserve">
+    <value>Expansions</value>
+  </data>
 </root>
