--- a/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.es.resx
@@ -355,7 +355,7 @@
     <value>Hombreras</value>
   </data>
   <data name="Sigils" xml:space="preserve">
-    <value>Símbolos</value>
+    <value>Sellos</value>
   </data>
   <data name="Small Bundles" xml:space="preserve">
     <value>Pequeños paquetes</value>
