--- a/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.fr.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.fr.resx
@@ -169,7 +169,7 @@
     <value>Extensions d'onglet de banque</value>
   </data>
   <data name="Black Lion Chests" xml:space="preserve">
-    <value>Coffres du Lion Noir</value>
+    <value>Coffres du Lion noir</value>
   </data>
   <data name="Booze" xml:space="preserve">
     <value>Alcool</value>
