--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
@@ -397,4 +397,10 @@
   <data name="Heavy" xml:space="preserve">
     <value>Schwet</value>
   </data>
+  <data name="Count in bank" xml:space="preserve">
+    <value>{0:N0} in der Bank</value>
+  </data>
+  <data name="Count in material storage" xml:space="preserve">
+    <value>{0:N0} im Materialienlager</value>
+  </data>
 </root>
