--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.resx
@@ -399,4 +399,10 @@
   <data name="Heavy" xml:space="preserve">
     <value>Heavy</value>
   </data>
+  <data name="Count in bank" xml:space="preserve">
+    <value>{0:N0} in Bank</value>
+  </data>
+  <data name="Count in material storage" xml:space="preserve">
+    <value>{0:N0} in Material Storage</value>
+  </data>
 </root>
