--- a/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.es.resx
@@ -447,4 +447,7 @@
   <data name="Enrichments" xml:space="preserve">
     <value>Enriquecimientos</value>
   </data>
+  <data name="Fishing Rods" xml:space="preserve">
+    <value>Cañas de pescar</value>
+  </data>
 </root>
