--- a/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.fr.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.fr.resx
@@ -447,4 +447,7 @@
   <data name="Enrichments" xml:space="preserve">
     <value>Enrichissements</value>
   </data>
+  <data name="Fishing Rods" xml:space="preserve">
+    <value>Cannes à pêche</value>
+  </data>
 </root>
