--- a/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.de.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/ItemsTabView.de.resx
@@ -450,4 +450,7 @@
   <data name="Fishing Rods" xml:space="preserve">
     <value>Angelruten</value>
   </data>
+  <data name="Conjured Doorway Unlockers" xml:space="preserve">
+    <value>Herbeigerufene Durchgangsöffne</value>
+  </data>
 </root>
