Add missing translations for glider unlock text

--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.es.resx
@@ -409,4 +409,7 @@
   <data name="You have already unlocked this dye" xml:space="preserve">
     <value>¡Ya has desbloqueado este tinte!</value>
   </data>
+  <data name="You have already unlocked this glider" xml:space="preserve">
+    <value>¡Ya has desbloqueado este planeador!</value>
+  </data>
 </root>
