--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.resx
@@ -411,4 +411,7 @@
   <data name="You have already unlocked this dye" xml:space="preserve">
     <value>You have already unlocked this dye!</value>
   </data>
+  <data name="You have already unlocked this glider" xml:space="preserve">
+    <value>You have already unlocked this glider!</value>
+  </data>
 </root>
