--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
@@ -409,4 +409,7 @@
   <data name="You have already unlocked this dye" xml:space="preserve">
     <value>Ihr habt diese Farbe bereits freigeschaltet!</value>
   </data>
+  <data name="You have already unlocked this glider" xml:space="preserve">
+    <value>Ihr habt diesen Gleitschirm bereits freigeschaltet!</value>
+  </data>
 </root>
