--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.fr.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.fr.resx
@@ -412,4 +412,7 @@
   <data name="You have already unlocked this dye" xml:space="preserve">
     <value>Vous avez déjà débloqué cette teinture !</value>
   </data>
+  <data name="You have already unlocked this glider" xml:space="preserve">
+    <value>Vous avez déjà débloqué ce deltaplane !</value>
+  </data>
 </root>
