Add missing translations for jade bot unlock text

--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.fr.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.fr.resx
@@ -415,4 +415,7 @@
   <data name="You have already unlocked this glider" xml:space="preserve">
     <value>Vous avez déjà débloqué ce deltaplane !</value>
   </data>
+  <data name="You have already unlocked this Jade Bot" xml:space="preserve">
+    <value>Vous avez déjà débloqué ce drone de jade !</value>
+  </data>
 </root>
