--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
@@ -412,4 +412,7 @@
   <data name="You have already unlocked this glider" xml:space="preserve">
     <value>Ihr habt diesen Gleitschirm bereits freigeschaltet!</value>
   </data>
+  <data name="You have already unlocked this Jade Bot" xml:space="preserve">
+    <value>Ihr habt diesen Jade-Bot bereits freigeschaltet!</value>
+  </data>
 </root>
