--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.es.resx
@@ -412,4 +412,7 @@
   <data name="You have already unlocked this glider" xml:space="preserve">
     <value>¡Ya has desbloqueado este planeador!</value>
   </data>
+  <data name="You have already unlocked this Jade Bot" xml:space="preserve">
+    <value>¡Ya has desbloqueado este robot de jade!</value>
+  </data>
 </root>
