--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.resx
@@ -249,8 +249,8 @@
   <data name="Shield" xml:space="preserve">
     <value>Shield</value>
   </data>
-  <data name="Shortbow" xml:space="preserve">
-    <value>Shortbow</value>
+  <data name="Short Bow" xml:space="preserve">
+    <value>Short Bow</value>
   </data>
   <data name="Small Bundle" xml:space="preserve">
     <value>Small Bundle</value>
