--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.de.resx
@@ -415,4 +415,7 @@
   <data name="You have already unlocked this Jade Bot" xml:space="preserve">
     <value>Ihr habt diesen Jade-Bot bereits freigeschaltet!</value>
   </data>
+  <data name="You have already unlocked this mount" xml:space="preserve">
+    <value>Ihr habt diesen Reittier bereits freigeschaltet!</value>
+  </data>
 </root>
