--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.es.resx
@@ -415,4 +415,7 @@
   <data name="You have already unlocked this Jade Bot" xml:space="preserve">
     <value>¡Ya has desbloqueado este robot de jade!</value>
   </data>
+  <data name="You have already unlocked this mount" xml:space="preserve">
+    <value>¡Ya has desbloqueado esta montura!</value>
+  </data>
 </root>
